<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_cost_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
        app:layout_constraintEnd_toStartOf="@+id/cost_of_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cost_of_service"
        app:srcCompat="@drawable/ic_store" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_service"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/cost_of_service"
        app:layout_constraintStart_toEndOf="@+id/icon_cost_of_service"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"/>
    </com.google.android.material.textfield.TextInputLayout>



    <ImageView
        android:id="@+id/icon_service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/question"
        app:layout_constraintBottom_toBottomOf="@id/question" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.TipTime.TextView"
        android:text="@string/how_was_the_service"
        android:paddingVertical="10dp"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/cost_of_service"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/question"
        android:checkedButton="@id/option_20_percent"
        app:layout_constraintStart_toStartOf="@id/question"
        >
        <RadioButton
            android:id="@+id/option_20_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:text="@string/amazing"/>
        <RadioButton
            android:id="@+id/option_18_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:text="@string/good"/>
        <RadioButton
            android:id="@+id/option_15_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:text="@string/okay"/>
    </RadioGroup>

    <ImageView
        android:id="@+id/icon_round_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_round_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/round_up_switch"
        app:layout_constraintBottom_toBottomOf="@id/round_up_switch" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:paddingVertical="10dp"
        android:text="@string/round_up"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon_round_up"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/round_up_switch"
        app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

    <TextView
        android:id="@+id/tip_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.TipTime.TextView"
        android:text="@string/tip_amount"
        android:textSize="15dp"
        android:paddingVertical="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/calculate_button"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>